FEAT: Se terminaron de responder las preguntas de la task 1.1

--- a/HojaDeTrabajo02/ht2eje3.ipynb
+++ b/HojaDeTrabajo02/ht2eje3.ipynb
@@ -16,17 +16,14 @@
     "\n",
     "# Link del repositorio\n",
     "\n",
-    "https://github.com/mar22266/LABORATORIOS-IA.git\n",
-    "\n",
-    "\n",
-    "\n"
+    "https://github.com/mar22266/LABORATORIOS-IA.git\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Task 1 - Preguntas Teóricas"
+    "# Task 1 - Preguntas Teóricas\n"
    ]
   },
   {
@@ -34,38 +31,83 @@
    "metadata": {},
    "source": [
     "Responda a cada de las siguientes preguntas de forma clara y lo más completamente posible.\n",
+    "\n",
     "1. Defina el proceso de decisión de Markov (MDP) y explique sus componentes.\n",
     "\n",
-    "        R//\n",
+    "R// Yo defino un Proceso de Decisión de Markov (MDP) como un marco matemático que me permite modelar problemas de decisión secuencial en entornos inciertos. En un MDP, se considera que la evolución del entorno depende únicamente del estado actual y la acción que tomo (la propiedad de Markov). Los componentes que identifico en un MDP son:\n",
     "\n",
+    "- **Conjunto de estados (S):** Representa todas las situaciones posibles en las que puedo encontrarme.\n",
+    "- **Conjunto de acciones (A):** Es el conjunto de decisiones o movimientos que puedo realizar en cada estado.\n",
+    "- **Función de transición (T):** Es la probabilidad de pasar de un estado a otro dado que ejecuto una acción, lo que modela la dinámica del entorno.\n",
+    "- **Función de recompensa (R):** Asigna un valor numérico a cada transición, lo que me indica el beneficio o costo de moverme de un estado a otro.\n",
+    "- **Factor de descuento (γ):** Es un valor entre 0 y 1 que pondera la importancia de las recompensas futuras frente a las inmediatas.\n",
     "\n",
     "2. Describa cual es la diferencia entre política, evaluación de políticas, mejora de políticas e iteración de políticas en el contexto de los PDM.\n",
     "\n",
-    "        R//\n",
+    "R// En base a lo que vimos en clase, según lo que entendí de la diferencia de los anteriormente mencionados es que:\n",
     "\n",
-    "\n",
+    "- **Política:** Es la función o regla que me indica qué acción debo tomar en cada estado.\n",
+    "- **Evaluación de políticas:** Es el proceso de calcular la función de valor de una política dada, es decir, determinar la recompensa acumulada esperada cuando sigo esa política.\n",
+    "- **Mejora de políticas:** Consiste en actualizar la política actual, eligiendo acciones que incrementen el valor esperado según la evaluación previa.\n",
+    "- **Iteración de políticas:** Es el proceso iterativo en el que alterno entre la evaluación y la mejora de la política hasta que la política converge a una solución óptima.\n",
     "\n",
     "3. Explique el concepto de factor de descuento (gamma) en los MDP. ¿Cómo influye en la toma de decisiones?\n",
     "\n",
-    "        R//\n",
+    "R// Yo entiendo el factor de descuento el cual es representado por γ, es un parámetro que asigna un peso a las recompensas futuras en comparación con las inmediatas. Un valor de γ cercano a 0 hace que me enfoque principalmente en recompensas inmediatas, mientras que un valor cercano a 1 me impulsa a considerar las recompensas futuras casi con la misma importancia que las actuales. En la toma de decisiones, esto significa que:\n",
     "\n",
+    "- **Con γ alto:** Prefiero estrategias que aseguren un buen rendimiento a largo plazo, aun si esto implica sacrificar beneficios inmediatos.\n",
+    "- **Con γ bajo:** Me inclino por maximizar beneficios a corto plazo, ya que las recompensas futuras tienen menor relevancia.\n",
     "\n",
     "4. Analice la diferencia entre los algoritmos de iteración de valores y de iteración de políticas para resolver MDP.\n",
     "\n",
-    "        R//\n",
+    "R// Yo distingo ambos algoritmos de la siguiente manera:\n",
     "\n",
+    "**Iteración de valores:**\n",
+    "En este método, se actualiza directamente la función de valor de cada estado utilizando la ecuación de Bellman. Este proceso iterativo continúa hasta que los valores convergen. Una vez obtenido el valor óptimo, se deriva la política óptima a partir de estos valores.\n",
+    "\n",
+    "**Iteración de políticas:**\n",
+    "Aquí, se comienza con una política inicial y, en cada iteración, realizo dos pasos:\n",
+    "\n",
+    "- **Evaluación de la política:** Se calcula la función de valor para la política actual.\n",
+    "- **Mejora de la política:** Posteriormente, se actualiza la política seleccionando, en cada estado, la acción que maximiza el valor obtenido.\n",
+    "\n",
+    "Reitero estos pasos hasta que la política deja de cambiar, lo que indica que he alcanzado la óptima.\n",
     "\n",
     "5. ¿Cuáles son algunos desafíos o limitaciones comunes asociados con la resolución de MDP a gran escala?\n",
-    "Discuta los enfoques potenciales para abordar estos desafíos.\n",
+    "   Discuta los enfoques potenciales para abordar estos desafíos.\n",
     "\n",
-    "        R//"
+    "R//\n",
+    "Yo reconozco que trabajar con MDP a gran escala presenta varios desafíos:\n",
+    "\n",
+    "- **Maldición de la dimensionalidad:**\n",
+    "  Al aumentar el número de estados y acciones, el espacio de búsqueda crece exponencialmente, lo que dificulta el cómputo exacto de la función de valor o la política óptima.\n",
+    "\n",
+    "- **Modelado complejo:**\n",
+    "  Es complicado modelar con precisión la función de transición y la función de recompensa en entornos complejos o muy inciertos.\n",
+    "\n",
+    "- **Carga computacional y de memoria:**\n",
+    "  Resolver MDP en entornos de gran escala requiere un alto poder computacional y memoria para almacenar y actualizar la información.\n",
+    "\n",
+    "Para abordar estos desafíos, yo considero varios enfoques potenciales:\n",
+    "\n",
+    "- **Métodos de aproximación:**\n",
+    "  Utilizar técnicas como redes neuronales o funciones aproximadoras para estimar la función de valor o la política, en lugar de calcularlas de forma exacta.\n",
+    "\n",
+    "- **Aprendizaje por refuerzo:**\n",
+    "  Emplear algoritmos como Q-learning o métodos basados en políticas que permitan aprender de manera iterativa a partir de muestras, sin necesidad de conocer el modelo completo.\n",
+    "\n",
+    "- **Descomposición del problema:**\n",
+    "  Dividir el MDP en subproblemas más pequeños y manejables, lo que reduce la complejidad global.\n",
+    "\n",
+    "- **Métodos basados en simulaciones:**\n",
+    "  Utilizar técnicas como los métodos Monte Carlo para estimar valores a partir de la experiencia directa en el entorno.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Task 2 - Preguntas Analíticas"
+    "# Task 2 - Preguntas Analíticas\n"
    ]
   },
   {
@@ -74,24 +116,23 @@
    "source": [
     "Responda a cada de las siguientes preguntas de forma clara y lo más completamente posible.\n",
     "\n",
-    "1. Analice críticamente los supuestos subyacentes a la propiedad de Markov en los Procesos de Decisión de\n",
-    "Markov (MDP). Analice escenarios en los que estos supuestos puedan no ser válidos y sus implicaciones\n",
-    "para la toma de decisiones.\n",
+    "1.  Analice críticamente los supuestos subyacentes a la propiedad de Markov en los Procesos de Decisión de\n",
+    "    Markov (MDP). Analice escenarios en los que estos supuestos puedan no ser válidos y sus implicaciones\n",
+    "    para la toma de decisiones.\n",
     "\n",
-    "        R//\n",
+    "            R//\n",
     "\n",
+    "2.  Explore los desafíos de modelar la incertidumbre en los procesos de decisión de Markov (MDP) y analice\n",
+    "    estrategias para una toma de decisiones sólida en entornos inciertos.\n",
     "\n",
-    "2. Explore los desafíos de modelar la incertidumbre en los procesos de decisión de Markov (MDP) y analice\n",
-    "estrategias para una toma de decisiones sólida en entornos inciertos.\n",
-    "\n",
-    "        R//"
+    "            R//\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Task 3 - Preguntas Prácticas"
+    "# Task 3 - Preguntas Prácticas\n"
    ]
   },
   {
@@ -146,47 +187,45 @@
     "# Dimension del entorno 4x4\n",
     "N = 4\n",
     "\n",
-    "# Definir las posibles configuraciones de inicio y meta \n",
+    "# Definir las posibles configuraciones de inicio y meta\n",
     "configuraciones = [\n",
     "    ((0, 0), (N - 1, N - 1)),\n",
     "    ((0, N - 1), (N - 1, 0)),\n",
     "    ((N - 1, 0), (0, N - 1)),\n",
-    "    ((N - 1, N - 1), (0, 0))\n",
+    "    ((N - 1, N - 1), (0, 0)),\n",
     "]\n",
     "start, goal = random.choice(configuraciones)\n",
     "\n",
     "# Determinar aleatoriamente el numero de hoyos entre 0 y 3\n",
     "n_holes = random.randint(0, 3)\n",
     "\n",
-    "# Seleccionar posiciones aleatorias para los hoyos \n",
-    "posibles_posiciones = [(i, j) for i in range(N) for j in range(N) if (i, j) not in [start, goal]]\n",
+    "# Seleccionar posiciones aleatorias para los hoyos\n",
+    "posibles_posiciones = [\n",
+    "    (i, j) for i in range(N) for j in range(N) if (i, j) not in [start, goal]\n",
+    "]\n",
     "holes = random.sample(posibles_posiciones, n_holes)\n",
     "\n",
     "# Crear el entorno\n",
-    "grid = [['F' for _ in range(N)] for _ in range(N)]\n",
-    "grid[start[0]][start[1]] = 'S'\n",
-    "grid[goal[0]][goal[1]] = 'G'\n",
+    "grid = [[\"F\" for _ in range(N)] for _ in range(N)]\n",
+    "grid[start[0]][start[1]] = \"S\"\n",
+    "grid[goal[0]][goal[1]] = \"G\"\n",
     "for h in holes:\n",
-    "    grid[h[0]][h[1]] = 'H'\n",
+    "    grid[h[0]][h[1]] = \"H\"\n",
     "\n",
     "# Mostrar el entorno generado\n",
     "print(\"Entorno Frozen Lake:\")\n",
     "for row in grid:\n",
-    "    print(' '.join(row))\n",
+    "    print(\" \".join(row))\n",
     "\n",
     "# Definicion de la dinamica del MDP\n",
     "# 0: arriba, 1: derecha, 2: abajo, 3: izquierda\n",
-    "acciones = {\n",
-    "    0: (-1, 0),  \n",
-    "    1: (0, 1),   \n",
-    "    2: (1, 0),   \n",
-    "    3: (0, -1)   \n",
-    "}\n",
+    "acciones = {0: (-1, 0), 1: (0, 1), 2: (1, 0), 3: (0, -1)}\n",
+    "\n",
     "\n",
     "# Retorna True si el estado es terminal meta o hoyo\n",
     "def es_terminal(state):\n",
     "    i, j = state\n",
-    "    return grid[i][j] in ['G', 'H']\n",
+    "    return grid[i][j] in [\"G\", \"H\"]\n",
     "\n",
     "\n",
     "# Dado un estado y una accion, retorna el siguiente estado. Si la accion lleva fuera de limites, se queda en el mismo estado. Si el estado ya es terminal, no se realiza movimiento.\n",
@@ -200,27 +239,30 @@
     "        return state\n",
     "    return new_state\n",
     "\n",
+    "\n",
     "# Retorna la recompensa de la transicion. Se muestra 1 si se llega a la meta, 0 en otro caso.\n",
     "def obtener_recompensa(state, next_state):\n",
     "    i, j = next_state\n",
-    "    if grid[i][j] == 'G':\n",
+    "    if grid[i][j] == \"G\":\n",
     "        return 1.0\n",
     "    else:\n",
     "        return 0.0\n",
     "\n",
+    "\n",
     "# Algoritmo de Iteracion de Valores para resolver el MDP\n",
     "# Parametros del MDP\n",
-    "gamma = 0.99   # Factor de descuento\n",
-    "theta = 1e-4   # Criterio de convergencia\n",
+    "gamma = 0.99  # Factor de descuento\n",
+    "theta = 1e-4  # Criterio de convergencia\n",
     "\n",
     "# Inicializar la funcion de valor V(s) para cada estado en la grilla\n",
     "V = np.zeros((N, N))\n",
+    "\n",
     "\n",
     "# Implementacion del algoritmo de iteracion de valores.\n",
     "def value_iteration():\n",
     "    while True:\n",
     "        delta = 0\n",
-    "        # Iterar sobre cada celda \n",
+    "        # Iterar sobre cada celda\n",
     "        for i in range(N):\n",
     "            for j in range(N):\n",
     "                state = (i, j)\n",
@@ -241,9 +283,10 @@
     "        if delta < theta:\n",
     "            break\n",
     "\n",
+    "\n",
     "# Extrae la politica optima a partir de la funcion de valor V. Para cada estado no terminal, se elige la accion que maximiza la recompensa futura.\n",
     "def extraer_politica():\n",
-    "    policy = np.full((N, N), -1, dtype=int)  \n",
+    "    policy = np.full((N, N), -1, dtype=int)\n",
     "    for i in range(N):\n",
     "        for j in range(N):\n",
     "            state = (i, j)\n",
@@ -259,6 +302,7 @@
     "                policy[i, j] = mejor_accion\n",
     "    return policy\n",
     "\n",
+    "\n",
     "# Ejecutar la iteracion de valores para calcular V(s)\n",
     "value_iteration()\n",
     "print(\"\\nFuncion de valor V(s):\")\n",
@@ -269,7 +313,7 @@
     "\n",
     "# Mapear acciones a simbolos para visualizacion\n",
     "# 0: ↑, 1: →, 2: ↓, 3: ←, -1: T estado terminal\n",
-    "action_symbols = {0: '↑', 1: '→', 2: '↓', 3: '←', -1: 'T'}\n",
+    "action_symbols = {0: \"↑\", 1: \"→\", 2: \"↓\", 3: \"←\", -1: \"T\"}\n",
     "\n",
     "print(\"\\nPolitica optima:\")\n",
     "for i in range(N):\n",
@@ -277,14 +321,15 @@
     "    for j in range(N):\n",
     "        # Mostrar S, G o H segun corresponda; de lo contrario, el simbolo de la accion\n",
     "        if (i, j) == start:\n",
-    "            row_symbols.append('S')\n",
+    "            row_symbols.append(\"S\")\n",
     "        elif (i, j) == goal:\n",
-    "            row_symbols.append('G')\n",
-    "        elif grid[i][j] == 'H':\n",
-    "            row_symbols.append('H')\n",
+    "            row_symbols.append(\"G\")\n",
+    "        elif grid[i][j] == \"H\":\n",
+    "            row_symbols.append(\"H\")\n",
     "        else:\n",
     "            row_symbols.append(action_symbols[policy[i, j]])\n",
-    "    print(' '.join(row_symbols))\n",
+    "    print(\" \".join(row_symbols))\n",
+    "\n",
     "\n",
     "# Funcion que encapsula la ejecucion del MDP y la visualizacion de resultados.\n",
     "def ejecutar_simulacion():\n",
@@ -304,8 +349,9 @@
     "        print(state)\n",
     "    print(\"\\nSimulacion completada.\")\n",
     "\n",
+    "\n",
     "# Ejecutar la simulacion\n",
-    "ejecutar_simulacion()\n"
+    "ejecutar_simulacion()"
    ]
   },
   {
@@ -318,7 +364,24 @@
     "\n",
     "Reflexión:\n",
     "\n",
-    "Para obtener el resultado deseado, se precisaron ajustes en el prompt, especificando claramente el formato y las modificaciones requeridas en el código. Con estas precisiones se logró que el código cumpliera con los objetivos sin hacer la totalidad del trabajo. Siempre siendo muy claros para ayudar y simplificar el resultado del prompt"
+    "Para obtener el resultado deseado, se precisaron ajustes en el prompt, especificando claramente el formato y las modificaciones requeridas en el código. Con estas precisiones se logró que el código cumpliera con los objetivos sin hacer la totalidad del trabajo. Siempre siendo muy claros para ayudar y simplificar el resultado del prompt\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Referencias\n",
+    "\n",
+    "- Silva, M. (2021, 10 diciembre). Aprendizaje por Refuerzo: Procesos de Decisión de Markov — Parte 1. Medium. https://medium.com/aprendizaje-por-refuerzo-introducci%C3%B3n-al-mundo-del/aprendizaje-por-refuerzo-procesos-de-decisi%C3%B3n-de-markov-parte-1-8a0aed1e6c59\n",
+    "\n",
+    "- ¿Cuáles son los principales desafíos y limitaciones de los procesos de decisión de Markov en aplicaciones de ciencia de datos? (2023, 28 abril). www.linkedin.com. https://www.linkedin.com/advice/1/what-main-challenges-limitations-markov-decision-processes?lang=es&originalSubdomain=es\n",
+    "\n",
+    "- ¿Cómo se pueden superar las limitaciones de los procesos de decisión de Markov? (2024, 1 enero). www.linkedin.com. https://www.linkedin.com/advice/0/how-can-you-overcome-limitations-markov-decision-ifcgf?lang=es\n",
+    "\n",
+    "- Academy, E. (2024, 11 junio). ¿Cuál es la importancia del factor de descuento (gamma) en el contexto del aprendizaje por refuerzo y cómo influye en la formación y el desempeño de un agente DRL? - Academia EITCA. EITCA Academy. https://es.eitca.org/artificial-intelligence/eitc-ai-arl-advanced-reinforcement-learning/deep-reinforcement-learning/deep-reinforcement-learning-agents/examination-review-deep-reinforcement-learning-agents/what-is-the-significance-of-the-discount-factor-gamma-in-the-context-of-reinforcement-learning-and-how-does-it-influence-the-training-and-performance-of-a-drl-agent/\n",
+    "\n",
+    "- Academy, E. (2024a, junio 11). ¿Cuál es la diferencia entre la iteración de valores y la iteración de políticas en la programación dinámica y cómo aborda cada método el problema de encontrar una política óptima? - Academia EITCA. EITCA Academy. https://es.eitca.org/artificial-intelligence/eitc-ai-arl-advanced-reinforcement-learning/markov-decision-processes/markov-decision-processes-and-dynamic-programming/examination-review-markov-decision-processes-and-dynamic-programming/what-is-the-difference-between-value-iteration-and-policy-iteration-in-dynamic-programming-and-how-does-each-method-approach-the-problem-of-finding-an-optimal-policy/\n"
    ]
   }
  ],
