--- a/HojaDeTrabajo02/ht2eje3.ipynb
+++ b/HojaDeTrabajo02/ht2eje3.ipynb
@@ -119,13 +119,73 @@
     "1.  Analice críticamente los supuestos subyacentes a la propiedad de Markov en los Procesos de Decisión de\n",
     "    Markov (MDP). Analice escenarios en los que estos supuestos puedan no ser válidos y sus implicaciones\n",
     "    para la toma de decisiones.\n",
+    "    **La propiedad de Markov** postula que la probabilidad de transición a un siguiente estado depende únicamente del estado actual y no de la secuencia histórica de estados. Este supuesto es la base de los Procesos de Decisión de Markov (MDP), pues **simplifica** drásticamente el modelado y la planificación al permitir resumir toda la “información relevante” en el estado presente.\n",
     "\n",
-    "            R//\n",
+    "    ## Supuesto\n",
+    "\n",
+    "    - El entorno puede representarse de tal forma que **todo lo necesario para predecir el futuro** (transiciones y recompensas) esté contenido en el estado actual.  \n",
+    "    - Si este supuesto se cumple, las transiciones y recompensas están determinadas por $(P(s_{t+1} \\mid s_t, a_t))$ y $(R(s_t,a_t)$, sin dependencia explícita de estados previos.\n",
+    "\n",
+    "    ### Estados mal definidos\n",
+    "    Si el estado definido **no captura toda la información relevante**, entonces la decisión correcta depende no solo del estado “actual” sino de cómo llegamos allí.\n",
+    "\n",
+    "    ### Dependencias a largo plazo\n",
+    "    En sistemas biológicos o económicos, puede haber **influencias latentes** que tardan en manifestarse. Un solo estado presente podría no reflejar el historial suficiente para predecir adecuadamente la transición o la recompensa.\n",
+    "\n",
+    "    ### Correlaciones escondidas\n",
+    "    En muchos procesos reales existen **correlaciones entre variables** que no se reflejan plenamente en la definición de estado (por ejemplo, condiciones climáticas con dependencia cíclica o patrones de comportamiento humano que se repiten).\n",
+    "\n",
+    "    #### Implicaciones en la toma de decisiones\n",
+    "\n",
+    "    - **Complejidad aumentada**  \n",
+    "      Al no cumplirse la propiedad de Markov, los algoritmos que la asumen pueden llevar a **soluciones subóptimas** o inestables.\n",
+    "      \n",
+    "    - **Necesidad de expandir la definición de estado**  \n",
+    "      Para contrarrestar la violación de la propiedad de Markov, se puede **rediseñar** el espacio de estados para incluir variables adicionales, o **convertir el problema** en un Proceso de Decisión de Semi-Markov (SMDP) si la transición depende de lapsos temporales variables.\n",
+    "      \n",
+    "    - **Menor interpretabilidad**  \n",
+    "      Cuantos más factores de contexto añadimos para satisfacer la propiedad de Markov, **más grande y complejo** se hace el modelo. Esto puede **dificultar** la interpretación y la implementación práctica.\n",
+    "\n",
+    "---\n",
     "\n",
     "2.  Explore los desafíos de modelar la incertidumbre en los procesos de decisión de Markov (MDP) y analice\n",
     "    estrategias para una toma de decisiones sólida en entornos inciertos.\n",
     "\n",
-    "            R//\n"
+    "    En un **MDP clásico**, se asume que las probabilidades de transición y la función de recompensas son conocidas o estimables con precisión. Sin embargo, en muchos casos, estas cantidades están sujetas a **incertidumbre** (por ejemplo, mediciones incompletas o ambientes cambiantes).\n",
+    "\n",
+    "    ## Principales desafíos\n",
+    "\n",
+    "    1. **Parámetros desconocidos o inexactos**  \n",
+    "      A menudo, las probabilidades de transición no son conocidas con exactitud; se estiman a partir de **datos limitados** o mediante modelos incompletos, lo cual introduce error.\n",
+    "\n",
+    "    2. **Ambientes no estacionarios**  \n",
+    "      Los entornos pueden cambiar con el tiempo, **rompiendo** el supuesto de que la dinámica es fija.\n",
+    "\n",
+    "    3. **Coste computacional**  \n",
+    "      Incorporar la incertidumbre requiere métodos **más complejos** (p. ej., MDPs robustos, POMDPs, etc.), incrementando la complejidad de cómputo y el esfuerzo de modelado.\n",
+    "\n",
+    "    ## Estrategias para una toma de decisiones robusta\n",
+    "\n",
+    "    1. **MDP robustos (Robust MDP)**  \n",
+    "      Modelan la incertidumbre asumiendo **conjuntos de posibles transiciones** en vez de un único modelo. La política se diseña para “funcionar bien” en el **peor caso** de dicho conjunto, balanceando el rendimiento y la robustez.\n",
+    "\n",
+    "    2. **MDP Bayesianos**  \n",
+    "      Tratan las dinámicas como **variables aleatorias** con distribuciones a priori y se actualizan con observaciones. Permiten cuantificar la incertidumbre de los parámetros y **tomar decisiones** basadas en la esperanza de rendimiento.\n",
+    "\n",
+    "    3. **POMDP (Partially Observable Markov Decision Process)**  \n",
+    "      Manejan la situación en la que el estado real no es directamente observable o está afectado por ruido. El agente debe mantener una **“creencia”** (una distribución de probabilidad sobre estados) y actualizarla conforme recibe observaciones. Aumenta la expresividad, aunque **eleva la complejidad** de resolución.\n",
+    "\n",
+    "    4. **Exploración activa y aprendizaje en línea**  \n",
+    "      En lugar de confiar en un modelo fijo, se **recogen datos continuamente** para refinar las estimaciones de transición o recompensa. Así se adaptan las estrategias a medida que el agente aprende más sobre el entorno.\n",
+    "\n",
+    "    5. **Muestreo Monte Carlo o métodos de simulación**  \n",
+    "      Cuando no se tiene certeza exacta de los parámetros, se pueden **simular distintos escenarios** y diseñar políticas que ofrezcan un buen desempeño promedio o un **equilibrio riesgo-recompensa** apropiado.\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
