Feat: frozen lake v4

--- a/Corto01/corto.ipynb
+++ b/Corto01/corto.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
     "# Definir el tamaño del mapa\n",
     "map_size = 4  \n",
     "\n",
-    "# Generar un mapa aleatorio de 4x4 (80% de casillas congeladas)\n",
+    "# Generar un mapa aleatorio de 4x4 \n",
     "random_map = generate_random_map(size=map_size)\n",
     "\n",
     "# Crear el entorno de FrozenLake con el mapa generado\n",
