Feat: frozen lAKE VIDEO

--- a/Corto01/corto.ipynb
+++ b/Corto01/corto.ipynb
@@ -18,7 +18,9 @@
     "\n",
     "https://github.com/mar22266/LABORATORIOS-IA.git\n",
     "\n",
-    "# Link Video\n"
+    "# Link Video\n",
+    "\n",
+    "https://youtu.be/cW3xOVBtXI0"
    ]
   },
   {
