Feat: lab 6pt2 done video

--- a/Laboratorio06/lab.ipynb
+++ b/Laboratorio06/lab.ipynb
@@ -18,7 +18,9 @@
     "\n",
     "https://github.com/mar22266/LABORATORIOS-IA.git\n",
     "\n",
-    "# Link del video"
+    "# Link del video\n",
+    "\n",
+    "https://youtu.be/3FzwNv2SR60"
    ]
   },
   {
@@ -64,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -378,30 +380,22 @@
       "2 1 2 1 2 2 2 \n",
       "\n",
       "IA con poda...\n",
-      "2 1 1 1 0 2 1 \n",
+      "2 1 1 1 0 0 1 \n",
       "1 2 2 2 0 2 1 \n",
       "2 1 2 1 0 1 2 \n",
-      "2 2 1 1 0 2 1 \n",
+      "2 2 1 1 2 2 1 \n",
       "1 1 1 2 1 1 2 \n",
       "2 1 2 1 2 2 2 \n",
       "\n",
       "IA sin poda...\n",
-      "2 1 1 1 0 2 1 \n",
+      "2 1 1 1 0 0 1 \n",
       "1 2 2 2 0 2 1 \n",
-      "2 1 2 1 0 1 2 \n",
-      "2 2 1 1 1 2 1 \n",
-      "1 1 1 2 1 1 2 \n",
-      "2 1 2 1 2 2 2 \n",
+      "2 1 2 1 \u001b[91m1\u001b[0m 1 2 \n",
+      "2 2 1 \u001b[91m1\u001b[0m 2 2 1 \n",
+      "1 1 \u001b[91m1\u001b[0m 2 1 1 2 \n",
+      "2 \u001b[91m1\u001b[0m 2 1 2 2 2 \n",
       "\n",
-      "IA con poda...\n",
-      "2 1 1 1 0 2 1 \n",
-      "1 2 2 \u001b[91m2\u001b[0m 0 2 1 \n",
-      "2 1 2 1 \u001b[91m2\u001b[0m 1 2 \n",
-      "2 2 1 1 1 \u001b[91m2\u001b[0m 1 \n",
-      "1 1 1 2 1 1 \u001b[91m2\u001b[0m \n",
-      "2 1 2 1 2 2 2 \n",
-      "\n",
-      "IA con poda gana!\n"
+      "IA sin poda gana!\n"
      ]
     }
    ],
