FEAT: Se agregaron las referencias de la task 1

--- a/Laboratorio06/lab.ipynb
+++ b/Laboratorio06/lab.ipynb
@@ -777,7 +777,9 @@
     "\n",
     "- Academy, E. (2024, 11 junio). ¿Qué es el principio minimax en la teoría de juegos y cómo se aplica a juegos de dos jugadores como el ajedrez o el Go? - Academia EITCA. EITCA Academy. https://es.eitca.org/inteligencia-artificial/eitc-ai-arl-aprendizaje-por-refuerzo-avanzado/casos-de-estudio/estudio-de-caso-de-juegos-cl%C3%A1sicos/revisi%C3%B3n-de-examen-estudio-de-caso-de-juegos-cl%C3%A1sicos/%C2%BFQu%C3%A9-es-el-principio-minimax-en-la-teor%C3%ADa-de-juegos-y-c%C3%B3mo-se-aplica-a-juegos-de-dos-jugadores-como-el-ajedrez-o-el-go%3F/\n",
     "\n",
-    "- La técnica de poda alfa-beta: mejora tu algoritmo minimax. (2024, marzo 10). https://www.toolify.ai/es/ai-news-es/la-tcnica-de-poda-alfabeta-mejora-tu-algoritmo-minimax-2698814\n"
+    "- Jsbsan. (2011, 30 enero). Inteligencia artificial: algoritmos MiniMax y poda beta. https://jsbsan.blogspot.com/2011/01/inteligencia-artificial-algoritmos.html\n",
+    "\n",
+    "- Santos, S., García, G., García, R., Gómez, I., & Peña, G. (2005). Inteligencia Artificial.\n"
    ]
   }
  ],
